// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutButtonContainer displays wallet buttons for guest checkout 1`] = `
<div
  class="checkout-button-container"
>
  <p>
    Check out faster with:
  </p>
  <div
    class="checkout-buttons-auto-layout"
  >
    <div
      class="checkoutRemote customer-skeleton"
    >
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
    </div>
    <div
      class="loading-skeleton"
      style="position:absolute;left:100%;top:-100%"
    >
      <div
        class="checkoutRemote"
      >
        <div
          id="paypalcommerceCheckoutButton"
        />
        <div
          id="paypalcommercecreditCheckoutButton"
        />
        <div
          class="AmazonPayContainer"
        >
          <div
            id="amazonpayCheckoutButton"
          />
        </div>
        <div
          id="googlepayauthorizenetCheckoutButton"
        />
      </div>
    </div>
  </div>
  <div
    class="checkout-separator"
  >
    <span>
      OR
    </span>
  </div>
</div>
`;

exports[`CheckoutButtonContainer hides wallet buttons for signed-in shoppers 1`] = `null`;

exports[`CheckoutButtonContainer hides wallet buttons with CSS when payment step is active 1`] = `
<div
  class="checkout-button-container"
  style="position:absolute;left:0;top:-100%"
>
  <p>
    Check out faster with:
  </p>
  <div
    class="checkout-buttons-auto-layout"
  >
    <div
      class="checkoutRemote customer-skeleton"
    >
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
    </div>
    <div
      class="loading-skeleton"
      style="position:absolute;left:100%;top:-100%"
    >
      <div
        class="checkoutRemote"
      >
        <div
          class="AmazonPayContainer"
        >
          <div
            id="amazonpayCheckoutButton"
          />
        </div>
        <div
          id="googlepayauthorizenetCheckoutButton"
        />
      </div>
    </div>
  </div>
  <div
    class="checkout-separator"
  >
    <span>
      OR
    </span>
  </div>
</div>
`;

exports[`CheckoutButtonContainer not displays wallet buttons for guest checkout if isPaymentDataRequired = false 1`] = `null`;

exports[`CheckoutButtonContainer removes Paypal commerce wallet buttons when payment step is active 1`] = `
<div
  class="checkout-button-container"
  style="position:absolute;left:0;top:-100%"
>
  <p>
    Check out faster with:
  </p>
  <div
    class="checkout-buttons-auto-layout"
  >
    <div
      class="checkoutRemote customer-skeleton"
    >
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
      <div
        class="skeleton-container"
      >
        <div
          class="input-skeleton"
        />
      </div>
    </div>
    <div
      class="loading-skeleton"
      style="position:absolute;left:100%;top:-100%"
    >
      <div
        class="checkoutRemote"
      >
        <div
          class="AmazonPayContainer"
        >
          <div
            id="amazonpayCheckoutButton"
          />
        </div>
        <div
          id="googlepayauthorizenetCheckoutButton"
        />
      </div>
    </div>
  </div>
  <div
    class="checkout-separator"
  >
    <span>
      OR
    </span>
  </div>
</div>
`;
